[package]
name = "safe-rl"
version = "0.1.0"
authors = ["Jackson Warley <jtwarley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
GSL = "0.4"
simplers_optimization = "0.4.1"
convert-base = "1.0.2"
rayon = "1.2.1"
rand = "0.7.2"
serde_derive = "1.0.103"